CORS origins update